Node/browser compatible event emitter.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "eventemitter3": "^4.0.7",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
