--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
   "license": "ISC",
   "dependencies": {
     "eventemitter3": "^4.0.7",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "promise-timeout": "^1.3.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.34",
+    "@types/promise-timeout": "^1.3.0",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "eslint": "^8.15.0",
     "prettier": "^2.6.2",
