--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "prepare": "npm run build",
     "build": "tsc --declaration",
-    "test": "npm run lint",
+    "test": "ava",
     "lint": "eslint src/**"
   },
   "keywords": [
@@ -31,12 +31,22 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@ava/typescript": "^3.0.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.34",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "ava": "^4.2.0",
     "eslint": "^8.15.0",
     "prettier": "^2.6.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
+  },
+  "ava": {
+    "typescript": {
+      "compile": "tsc",
+      "rewritePaths": {
+        "src/": "dist/"
+      }
+    }
   }
 }
