--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "license": "ISC",
   "dependencies": {
     "eventemitter3": "^4.0.7",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "make-error": "^1.3.6"
   },
   "devDependencies": {
     "@ava/typescript": "^3.0.1",
