--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "topology-runner",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Run a topology consisting of a directed acyclic graph",
   "author": "GovSpend",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "git://github.com/smartprocure/topology-runner.git",
   "scripts": {
-    "prepare": "npm run build",
+    "prepare": "npm test && npm run build",
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc --declaration --project tsconfig.build.json",
-    "test": "ava",
+    "test": "jest",
     "lint": "eslint src/**"
   },
   "keywords": [
@@ -33,22 +33,15 @@
     "make-error": "^1.3.6"
   },
   "devDependencies": {
-    "@ava/typescript": "^3.0.1",
+    "@types/jest": "^27.5.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.34",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "ava": "^4.2.0",
     "eslint": "^8.15.0",
+    "jest": "^28.1.0",
     "prettier": "^2.6.2",
+    "ts-jest": "^28.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
-  },
-  "ava": {
-    "typescript": {
-      "compile": "tsc",
-      "rewritePaths": {
-        "src/": "dist/"
-      }
-    }
   }
 }
