--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "dist/index.d.ts",
   "repository": "git://github.com/smartprocure/topology-runner.git",
   "scripts": {
-    "prepare": "npm test && npm run build",
+    "prepare": "npm run lint && npm test && npm run build",
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc --declaration",
     "test": "jest",
